fix : 보강