@@ -1,12 +1,17 @@
 package org.example.p12946;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Main {
+    public static void main(String[] args) {
+        System.out.println(Arrays.deepToString(new Solution().solution(4)));
+    }
 }
 
 class Solution {
+    public static boolean isDebug = false;
     public int[][] solution(int n) {
         return new Hanoi(1, 3, n).toArray();
     }
@@ -14,6 +19,7 @@ class Solution {
 
 class Hanoi {
     private final List<int[]> paths = new ArrayList<>();
+    private int calculateCallCount = 0;
 
     public Hanoi(int from, int to, int n) {
         calculate(from, to, n, 1);
@@ -24,14 +30,16 @@ class Hanoi {
     // n : 옮길 원판 개수
     // empty : from 도 아니고 to 도 아닌 기둥 번호
     private void calculate(int from, int to, int n, int depth) {
-        String debugLineHead = "\t".repeat(depth - 1) + "(%d) => (%d), %d개 옮기기".formatted(from, to, n);
+        calculateCallCount++;
+        String debugLineHead = "\t".repeat(depth - 1) + String.format("%03d : (%d) => (%d), %d개 옮기기", calculateCallCount, from
+        , to, n);
 
-        System.out.println(debugLineHead + " - 시작");
+        if (Solution.isDebug) System.out.println(debugLineHead + " - 시작");
 
         if (n == 1) {
             addPath(from, to);
 
-            System.out.println(debugLineHead + " - 끝");
+            if (Solution.isDebug) System.out.println(debugLineHead + " - 끝(addPath)");
             return;
         }
         int empty = 6 - from - to;
@@ -40,7 +48,7 @@ class Hanoi {
         calculate(from, to, 1, depth + 1);
         calculate(empty, to, n - 1, depth + 1);
 
-        System.out.println(debugLineHead + " - 끝");
+        if (Solution.isDebug) System.out.println(debugLineHead + " - 끝");
     }
 
     private void addPath(int from, int to) {
